[package]
name = "rust-docker-sample"
version = "0.1.0"
edition = "2018"
authors = ["teketekere <hujikoseina@gmail.com>"]
license = "MIT"
description = "A sample project"
repository = "https://github.com/teketekere/rust-docker-sample"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
